All add all topic partitons to written message